Rename `redirect_to` query parameter to `redirect_uri` in accordance with RFC 6749.
Reference: https://datatracker.ietf.org/doc/html/rfc6749#appendix-A.6
