# trailbase-assets/js/bindings/LoginRequest.ts
@@ -1,3 +1,3 @@
 // This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
 
-export type LoginRequest = { email: string, password: string, redirect_to: string | null, response_type: string | null, pkce_code_challenge: string | null, };
+export type LoginRequest = { email: string, password: string, redirect_uri: string | null, response_type: string | null, pkce_code_challenge: string | null, };
